fix: override dialog max-width on small sizes

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -272,8 +272,8 @@ dialog {
     }
   }
   @media (width <= 600px) {
-    max-width: 100dvw;
-    max-height: 100dvh;
+    max-width: 100dvw !important;
+    max-height: 100dvh !important;
   }
 }
 .container {
